add: nav commands for different api_id

--- a/src/dog_guide/params/nav2_params.yaml
+++ b/src/dog_guide/params/nav2_params.yaml
@@ -131,7 +131,7 @@ controller_server:
     simple_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.2  #0.25
+      xy_goal_tolerance: 0.25
       yaw_goal_tolerance: 0.25
     # DWB parameters
     FollowPath:
@@ -171,7 +171,7 @@ controller_server:
       linear_granularity: 0.05
       angular_granularity: 0.025
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.2  #0.25
+      xy_goal_tolerance: 0.25
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
@@ -205,7 +205,7 @@ controller_server:
 #       movement_time_allowance: 10.0
 #     goal_checker:
 #       plugin: "nav2_controller::SimpleGoalChecker"
-#       xy_goal_tolerance: 0.15
+#       xy_goal_tolerance: 0.25
 #       yaw_goal_tolerance: 0.25
 #       stateful: True
 #     FollowPath:
