add: NavigationStatus.msg; cancel goal when emergency; continue navigation

--- a/src/custom_nav_interfaces/CMakeLists.txt
+++ b/src/custom_nav_interfaces/CMakeLists.txt
@@ -4,6 +4,7 @@ project(custom_nav_interfaces)
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)        # 若 msg 里没引用可删
+find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Waypoint.msg"
@@ -11,8 +12,9 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/NavigationResponse.msg"
   "msg/ActionConfig.msg"
   "msg/VoiceConfig.msg"
+  "msg/NavigationStatus.msg"
   "srv/NavigationExecute.srv"
-  DEPENDENCIES std_msgs
+  DEPENDENCIES std_msgs geometry_msgs
 )
 
 ament_export_dependencies(rosidl_default_runtime)
